# quadruped_mujoco_rl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
assets/robots/: quadruped.xml
configs/: env_flat.yaml  env_go2.yaml  env_go2_command.yaml  env_go2_command_v2.yaml  env_go2_command_v3_phase1.yaml  env_go2_command_v4_1_gait.yaml  env_go2_command_v4_canonical.yaml  env_go2_quality.yaml  env_go2_quality_v2.yaml  env_go2_stable.yaml  train_ppo.yaml  train_ppo_go2.yaml  train_ppo_go2_command.yaml  train_ppo_go2_command_v2.yaml  train_ppo_go2_command_v3_phase1.yaml  train_ppo_go2_command_v4_1_gait.yaml  train_ppo_go2_command_v4_canonical.yaml  train_ppo_go2_lr1e-4.yaml  train_ppo_go2_quality.yaml  train_ppo_go2_quality_v2.yaml  train_ppo_go2_stable.yaml
docs/: PROJECT_JOURNAL.md
quadruped_mujoco_rl/: __init__.py
quadruped_mujoco_rl/controllers/: __init__.py
quadruped_mujoco_rl/envs/: __init__.py  quadruped_env.py  registration.py
quadruped_mujoco_rl/training/: evaluate.py  train_ppo.py
quadruped_mujoco_rl/utils/: __init__.py  config.py  paths.py
scripts/: check_mujoco_model.py  start_tensorboard.py  watch_random_env.py
tests/: test_quadruped_env.py
