[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quadruped-mujoco-rl"
version = "0.1.0"
description = "Quadruped locomotion reinforcement learning experiments in MuJoCo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "mujoco>=3.1",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "stable-baselines3>=2.3",
  "tensorboard>=2.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["quadruped_mujoco_rl*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
